@@ -1832,3 +1832,5 @@ Added -c option to vwrays to repeat pixels for rtcontrib.
 Reworked rtcontrib program and renamed to rcontrib.  New version runs much
 faster, especially on multiprocessor systems, and doesn't require as much
 memory.  No longer calls rtrace; instead does all the work itself.
+
+Added -d option to genskyvec to produce direct-only (sun no sky) vector.
